--- a/bidding/static/styles/styles.css
+++ b/bidding/static/styles/styles.css
@@ -187,6 +187,14 @@ table th i {
     text-align: center;
 }
 
+#invoice .success {
+    color: green;
+}
+
+#invoice .fail {
+    color: red;
+}
+
 h3 {
     text-align: center;
     display: block;
